# switch-album-sorter

./: .gitignore  Cargo.toml  README.md
src/: game_ids.rs  main.rs
