[package]
name = "switch-album-sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.46.1"
clap = { version = "4.4.12", features = ["derive"] }
serde_json = "1.0.108"
walkdir = "2.4.0"
